[gd_scene load_steps=13 format=3 uid="uid://com0xhg5f86sf"]

[ext_resource type="Script" uid="uid://c3i553g7vouhl" path="res://scenes/levels/level_3.gd" id="1_o8c3j"]
[ext_resource type="PackedScene" uid="uid://c2hc4wbbfjp5w" path="res://scenes/wind.tscn" id="2_44gv1"]
[ext_resource type="PackedScene" uid="uid://dtmy0shj81mr1" path="res://scenes/obstacles/thing.tscn" id="3_0ljxa"]
[ext_resource type="PackedScene" uid="uid://5f5nee2ogsrs" path="res://scenes/collect/goal.tscn" id="4_0qepi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8c3j"]
size = Vector2(1856, 34.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44gv1"]
size = Vector2(1922, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ljxa"]
size = Vector2(1177.5, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qepi"]
size = Vector2(1226, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmg3e"]
size = Vector2(2331, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftfob"]
size = Vector2(2304, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugcn1"]
size = Vector2(4438, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkk1g"]
size = Vector2(2803.5, 957)

[node name="Level3" type="Node2D"]
script = ExtResource("1_o8c3j")

[node name="Wind" parent="." instance=ExtResource("2_44gv1")]
position = Vector2(2401, 70)
width = 200

[node name="Wind2" parent="." instance=ExtResource("2_44gv1")]
position = Vector2(3294, -205)
width = 200

[node name="Blocks" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D"]
position = Vector2(882, 229.75)
shape = SubResource("RectangleShape2D_o8c3j")

[node name="StaticBody2D2" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D2"]
position = Vector2(3151, 400)
shape = SubResource("RectangleShape2D_44gv1")

[node name="StaticBody2D3" type="StaticBody2D" parent="Blocks"]
position = Vector2(3233, -75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D3"]
position = Vector2(1350, -249)
shape = SubResource("RectangleShape2D_0ljxa")

[node name="StaticBody2D4" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D4"]
position = Vector2(6227, -164)
shape = SubResource("RectangleShape2D_0qepi")

[node name="StaticBody2D5" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D5"]
position = Vector2(5140, 1082)
rotation = 0.395313
shape = SubResource("RectangleShape2D_fmg3e")

[node name="StaticBody2D6" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D6"]
position = Vector2(7927, 490)
shape = SubResource("RectangleShape2D_ftfob")

[node name="StaticBody2D7" type="StaticBody2D" parent="Blocks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D7"]
position = Vector2(9824, 1426)
shape = SubResource("RectangleShape2D_ugcn1")

[node name="Items" type="Node" parent="."]

[node name="Thing" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(4362, -425)
type = -1

[node name="Thing2" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(4072, -571)
type = -1

[node name="Thing3" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(4645, -425)
type = -1

[node name="Thing4" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(4996, -420)
type = 1

[node name="Thing5" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(7121, -236)

[node name="Thing6" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(4807, 838)
type = 1

[node name="Thing7" parent="Items" instance=ExtResource("3_0ljxa")]
position = Vector2(7759, -20)
type = 1

[node name="Goal" parent="." instance=ExtResource("4_0qepi")]
position = Vector2(8980, 423)

[node name="Goal2" parent="." instance=ExtResource("4_0qepi")]
position = Vector2(11968, 1336)

[node name="OOB" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OOB"]
position = Vector2(0, 12)
polygon = PackedVector2Array(-79, 646, 1998, 679, 3138, 1057, 5085, 1740, 6138, 1718, 6103, 2171, 7723, 2171, 7688, 1611, 12336, 1623, 12324, -821, 12884, -821, 12872, 1611, 12860, 2862, 1490, 2898, -13, 1217)

[node name="Zoom1" type="Area2D" parent="."]
position = Vector2(4608, -454)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zoom1"]
position = Vector2(2146.25, 113.5)
shape = SubResource("RectangleShape2D_fkk1g")

[connection signal="body_entered" from="OOB" to="." method="_on_oob_body_entered"]
[connection signal="body_entered" from="Zoom1" to="." method="_on_zoom_1_body_entered"]
[connection signal="body_exited" from="Zoom1" to="." method="_on_zoom_1_body_exited"]
